--- a/src/scss/main/_modal.scss
+++ b/src/scss/main/_modal.scss
@@ -39,7 +39,7 @@ h5 {
             }
             font-family: inherit;
             width: clamp(30%, 1024px, 80%);
-            background-color: rgb(12, 16, 37);
+            background-color: rgb(3, 5, 12);
             border-radius: 15px;
             height: 90%;
             border: 1px solid #718093a2;
@@ -69,7 +69,7 @@ h5 {
 
             &__hero {
                 @include media-mobile {
-                    height: 40vh;
+                    height: 38vh;
                 }
                 width: 100%;
                 height: 38%;
