--- a/src/scss/main/_movie.scss
+++ b/src/scss/main/_movie.scss
@@ -52,7 +52,7 @@
             @include media-mobile{
                 font-size: .95rem;
                 letter-spacing: .1px;
-                max-width: 78%;
+                max-width: 75%;
                 font-weight: 400;
                 margin-bottom: .5rem;
             }
